# argus

./: .gitattributes  .gitignore  .trivyignore  CHANGELOG.md  COMPLETION-SUMMARY.md  README-REPORT.md  README.md  Web_interface.md  argus-mcp.json  argus_implementation_prompt_v5.md  argus_v5_followup_2_cursor_prompt.md  argus_v5_followup_cursor_prompt.md  codex.md  cursor_prompt_argus_v2_env_aware.md  cursor_prompt_valhalla_report_fix.md  hexstrike_argus_cursor_prompt_v4.md  pytest.ini  renovate.json  requirements-test.txt  start.md  strix_argus_analysis_cursor_prompt_v3.md  Анализ_архитектуры_ARGUS.md  Бэклог.md  Развитие.md  Развитие2.md  бэклог2.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  SECURITY_P0_CHECKLIST.md  alembic.ini  conftest.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_rls_and_audit_immutable.py  003_backend_core_tables_rls.py  004_seed_default_tenant.py  005_recon_models.py  006_threat_model_run.py  007_vulnerability_analysis_run.py  008_add_exploitation_models.py  009_reports_tier_generation_metadata.py  010_findings_proof_of_concept.py  011_findings_owasp_category.py  012_report_objects_format_length.py  013_findings_confidence_evidence.py  014_findings_confidence_server_default.py  015_findings_adversarial_score_scans_cost_summary.py  016_scan_mode_finding_dedup_status.py  017_finding_notes_false_positive_scan_event_duration.py  019_reports_table.py  020_mcp_audit_table.py  021_mcp_notification_dispatch_log.py  022_rate_limiter_state_table.py  023_epss_kev_tables.py  024_tenant_exports_sarif_junit.py  025_tenant_limits_overrides.py  026_scan_schedules.py  027_webhook_dlq.py  028_admin_sessions.py  029_tenant_pdf_archival_format.py  030_hash_admin_session_ids.py  031_drop_legacy_admin_session_id.py  032_admin_mfa_columns.py
backend/app/: __init__.py
backend/app/prompts/: parser_normalizer.md  reporter.md  threat_modeling_prompts.py  validator.md  vulnerability_analysis_prompts.py
backend/app/schemas/: __init__.py
backend/config/mcp/: SIGNATURES  server.yaml
backend/config/payloads/: SIGNATURES  auth_bypass.yaml  cache_poisoning.yaml  command_injection_safe.yaml  crlf.yaml  crlf_safe.yaml  graphql.yaml  graphql_safe.yaml  http_smuggling.yaml  idor.yaml  jwt.yaml  jwt_safe.yaml  ldapi.yaml  ldapi_safe.yaml  lfi_rfi.yaml  mass_assignment.yaml  mass_assignment_safe.yaml  nosqli.yaml  nosqli_safe.yaml  oauth.yaml  open_redirect.yaml  open_redirect_safe.yaml  path_traversal.yaml  payload_catalog_index.json  proto_smuggle.yaml  prototype_pollution.yaml  prototype_pollution_safe.yaml  race_condition.yaml  rce.yaml  sqli.yaml  sqli_safe.yaml  ssrf.yaml  ssrf_oast_safe.yaml  ssti.yaml  ssti_safe.yaml  traversal_safe.yaml  xpathi_safe.yaml  xss.yaml  xss_contextual.yaml  xxe.yaml  (+1 more)
backend/config/prompts/: SIGNATURES  critic_v1.yaml  fixer_v1.yaml  planner_v1.yaml  reporter_v1.yaml  verifier_v1.yaml
backend/config/tools/: SIGNATURES  amass_passive.yaml  apktool.yaml  aquatone.yaml  arachni.yaml  arjun.yaml  assetfinder.yaml  bandit.yaml  binwalk.yaml  bloodhound_python.yaml  censys.yaml  chaos.yaml  checkov.yaml  chrome_csp_probe.yaml  clairvoyance.yaml  cloud_metadata_check.yaml  cloudsploit.yaml  cmsmap.yaml  cookie_probe.yaml  cors_probe.yaml  crackmapexec.yaml  crt_sh.yaml  dalfox.yaml  detect_secrets.yaml  dirsearch.yaml  dnsrecon.yaml  dnsx.yaml  dockle.yaml  droopescan.yaml  enum4linux_ng.yaml  evil_winrm.yaml  eyewitness.yaml  favfreak.yaml  feroxbuster.yaml  ffuf_dir.yaml  ffuf_param.yaml  ffuf_vhost.yaml  fierce.yaml  findomain.yaml  gau.yaml  (+118 more)
backend/data/: owasp_top_10_2025_en.json  owasp_top_10_2025_ru.json  sqli_all.txt  tool_configs.json  xss_payloads.txt
backend/data/payloads/: va_dir_small.txt  xss_custom.txt
backend/docs/: reporting.md
backend/examples/ai_outputs/: anomaly_interpretation.example.json  api_surface_inference.example.json  content_similarity_interpretation.example.json  headers_tls_summary.example.json  js_findings_analysis.example.json  parameter_input_analysis.example.json  stage2_preparation_summary.example.json  stage3_preparation_summary.example.json
backend/scripts/: _pdfa_fixtures.py  _verapdf_assert.py  docs_tool_catalog.py  dump_alembic_schema.py  export_mcp_openapi.py  mcp_sign.py  payloads_list.py  payloads_sign.py  prompts_list.py  prompts_sign.py  render_pdfa_sample.py  sync_requirements.py  tools_list.py  tools_sign.py
backend/src/: __init__.py  celery_app.py  owasp_top10_2025.py  tasks.py
backend/src/agents/: __init__.py  memory_compressor.py  va_orchestrator.py
backend/src/api/: __init__.py  schemas.py
backend/src/auth/: __init__.py  _mfa_crypto.py  admin_dependencies.py  admin_mfa.py  admin_sessions.py  admin_users.py
backend/src/cache/: __init__.py  scan_knowledge_base.py  tool_cache.py  tool_recovery.py
backend/tests/: __init__.py  conftest.py  test_active_injection_policy_safe.py  test_ai_payload_candidates_phase2.py  test_alf_nu_xss.py  test_arg058_dual_listed_migration.py  test_argus003_api_contract.py  test_argus003_auth.py  test_argus003_db.py  test_argus003_schemas.py  test_argus004_api.py  test_argus004_handlers.py  test_argus004_phases.py  test_argus004_state_machine.py  test_argus005_exploit_verify.py  test_argus006_argus_client.py  test_argus006_executor.py  test_argus006_hexstrike.py  test_argus006_tools_router.py  test_argus007_executor_sandbox.py  test_argus007_guardrails.py  test_argus007_rate_limiter.py  test_argus007_scans_celery.py  test_argus007_tasks.py  test_argus007_tools_guardrails.py  test_argus008_ai_prompts.py  test_argus008_data_sources.py  test_argus008_llm.py  test_argus009_reports.py  test_argus010_sse_observability.py  test_argus013_prompt_registry.py  test_argus015_security_p0.py  test_audit3_admin_auth.py  test_audit3_code_quality.py  test_audit3_custom_script.py  test_audit3_exploitation_scope.py  test_audit3_infra.py  test_audit3_llm_facade.py  test_audit3_memory_compressor.py  test_audit3_metasploit.py  (+189 more)
(+1795 files in other folders)
